🧹 Cleanup: Remove duplicate microservices and unused folders - consolidate to Eventos-Microservicios/